crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_transition_all_skipped_plan.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: st
---
ExecutionState {
    state_version: "shipper.state.v1",
    plan_id: "plan-snapshot-test",
    registry: Registry {
        name: "crates-io",
        api_base: "https://crates.io",
        index_base: Some(
            "https://index.crates.io",
        ),
    },
    created_at: 2025-01-15T12:00:00Z,
    updated_at: 2025-01-15T12:00:00Z,
    attempt_history: [],
    packages: {
        "a@1.0.0": PackageProgress {
            name: "a",
            version: "1.0.0",
            attempts: 0,
            state: Skipped {
                reason: "already published",
            },
            last_updated_at: 2025-01-15T12:00:00Z,
        },
        "b@1.0.0": PackageProgress {
            name: "b",
            version: "1.0.0",
            attempts: 0,
            state: Skipped {
                reason: "already published",
            },
            last_updated_at: 2025-01-15T12:00:00Z,
        },
    },
}
