crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_transition_ambiguous_to_published.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: steps
---
[
    "initial: Ambiguous { message: \"upload timeout\" }",
    "after verification: Published",
]
