crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_transition_pending_to_failed_retry_to_published.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: steps
---
[
    "initial: Pending",
    "after failure: Failed { class: Retryable, message: \"rate limited\" }",
    "after retry reset: Pending",
    "after upload: Uploaded",
    "after publish: Published",
]
