crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_transition_pending_to_uploaded_to_published.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: steps
---
[
    "initial: Pending",
    "after upload: Uploaded",
    "after publish: Published",
]
